elastic-stack/kibana-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kibana-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - hosts:
        - "test-kibana.lab.capstonec.net"
      port:
        name: "http"
        number: 80
        protocol: "HTTP"
    - hosts:
        - "test-kibana.lab.capstonec.net"
      port:
        name: "https"
        number: 443
        protocol: "HTTPS"
      tls:
        mode: "SIMPLE"
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
